@@ -128,8 +128,8 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 5.3.5-alpha03
-@set doc-edition 5.3.5-alpha03
+@set nco-edition 5.3.5-alpha04
+@set doc-edition 5.3.5-alpha04
 @set copyright-years 1995--2025
 @set update-year 2025
 @set update-date 5 September 2025
