@@ -1,5 +1,9 @@
 2025-09-07  Charlie Zender  <zender@uci.edu>
 
+	* NCO 5.3.5-alpha04 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.3.5-alpha04: Guava cream cheese danish';git push
+	git tag -a 5.3.5-alpha04 -m '';git push --tags
+
 	* NCO 5.3.5-alpha03 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.3.5-alpha03: Bodkin';git push
 	git tag -a 5.3.5-alpha03 -m 'all: --var_lst = --variables = -v;	ncks/ncremap: dgn bad row/col';git push --tags
